Added images to navigation, moved some footnotes to bib

--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -214,3 +214,17 @@
   publisher =    {IEEE},
   year =         {2015}
 }
+
+@inproceedings{marder2010office,
+  title={The office marathon: Robust navigation in an indoor office environment},
+  author={Marder-Eppstein, Eitan and Berger, Eric and Foote, Tully and Gerkey, Brian and Konolige, Kurt},
+  booktitle={Robotics and Automation (ICRA), 2010 IEEE International Conference on},
+  pages={300--307},
+  year={2010},
+  organization={IEEE}
+}
+
+@misc{navfn_package,
+	title={navfn package }, 
+	howpublished={\url{http://wiki.ros.org/navfn}}, 
+	note={Accessed: 2017-10-24}}
