--- a/capstone_report.tex
+++ b/capstone_report.tex
@@ -5,6 +5,7 @@
 \setlength\parindent{0pt}
 \usepackage[margin=0.8in]{geometry}
 \usepackage{amssymb,amsmath}
+\usepackage{xr}
 \usepackage{booktabs}
 \usepackage{multirow}
 \renewcommand{\arraystretch}{1.5}
